Fix bug on Safari

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -16,6 +16,7 @@ Mobile: < 740
 
     .form-contact .form-control{
         padding: 16px;
+        font-size: 17px;
     }
 
     .button{
@@ -37,6 +38,10 @@ Mobile: < 740
     .information-contact{
         line-height: 2;
     }
+
+    .mobile-send-button{
+        font-size: 17px;
+    }
 }
 
 /* Tablet */
@@ -46,6 +51,10 @@ Mobile: < 740
 
 /* Mobile */
 @media (max-width: 740px) {
+    .button{
+        -webkit-appearance: none;
+    }
+
     .mobile-full-width{
         width: 100% !important;
     }
